crates/shingetsu-compiler/tests/compile_fail/enum_option_variant.rs
use shingetsu::FromLua;

#[derive(FromLua)]
enum Bad {
    MaybeInt(Option<i64>),
    Str(bytes::Bytes),
}

fn main() {}
